--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -26,7 +26,7 @@
                             class="menu-res-link text-decoration-none text-uppercase fw-bold">
                             Cuộc thi
                         </a></li>
-                    <li class="menu-res-item "><a href=""
+                    <li class="menu-res-item "><a routerLink="/test-nang-luc"
                             class="menu-res-link text-decoration-none text-uppercase fw-bold">
                             Test năng lực
                         </a></li>
