--- a/src/app/pages/post-result-search/post-result-search.component.css
+++ b/src/app/pages/post-result-search/post-result-search.component.css
@@ -71,3 +71,41 @@
 .post-item {
     height: 450px;
 }
+/* CSS FILTER */
+.recruitment-filter-box{
+    background-color: var(--gray-200);
+  }
+  
+  .filter-skill-item{
+    padding: 10px 20px;
+    font-size: 0.9rem;
+    background-color: var(--gray-200);
+    margin-right: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .filter-skill-box .active{
+    background-color: var(--primary);
+    color: var(--white);
+  }
+  
+  .btn-search-recruitment{
+    background-color: var(--primary);
+    color: var(--white);
+    border: none;
+    border-radius: 6px;
+    font-size: 1rem;
+    padding-top: 3px;
+  }
+  
+  .btn-search-recruitment:hover{
+    opacity: 0.8;
+  }
+  
+  .image-title{
+    width: 30px;
+    margin-right: 15px;
+    display: inline-block;
+  }
+  
